# codenav

./: Dockerfile  README.md  __init__.py  baseline_results.json  client.py  debug_codenav.py  inference.py  models.py  openenv.yaml  pyproject.toml  scenario_generator.py  scenarios.py  test_all_tasks.py  test_episode.py  train.py  validate-submission.sh
openenv_codenav.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: __init__.py  app.py  codenav_environment.py
