# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-codenav"
version = "1.0.0"
description = "CodeNav — Developer Workflow RL Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + WebSocket client types)
    "openenv-core[core]>=0.2.2",

    # All other dependencies are Python standard library only:
    # ast, difflib, re, uuid, os — no extra packages needed
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

# Baseline inference script dependencies
baseline = [
    "openai>=1.0.0",
    "websockets>=12.0",
]

[project.scripts]
# Server entry point — enables running via:
#   uv run --project . server
#   uv run --project . server --port 8001
server = "codenav.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["codenav", "codenav.server"]
package-dir = { "codenav" = ".", "codenav.server" = "server" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]